--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
     "webpack-cli": "^3.3.6"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "google-maps-react": "^2.0.2",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "reactstrap": "^8.0.1"
+    "react-redux": "^7.1.0",
+    "reactstrap": "^8.0.1",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0"
   }
 }
